Layout bugfix

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -61,9 +61,7 @@ h1, h2, h3 {
   font-size: 20px;
 }
 
-footer {  
-  position: fixed;
-  bottom: 0;
+footer {    
   color: darkgray;
   background-color: black;
   width: 100%;
